Criando Scaffolding do Identity

--- a/CasaDoCodigo/appsettings.json
+++ b/CasaDoCodigo/appsettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "Serilog": {
     "Using": [
       "Serilog.Sinks.File"
@@ -12,7 +12,9 @@
         }
       }
     ],
-    "Enrich": [ "FromLogContext" ]
+    "Enrich": [
+      "FromLogContext"
+    ]
   },
   "Logging": {
     "IncludeScopes": false,
@@ -21,6 +23,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CasaDoCodigo;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CasaDoCodigo;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+    "AppIdentityContextConnection": "DataSource=CasaDoCodigo.db"
   }
 }
