--- a/CasaDoCodigo/appsettings.json
+++ b/CasaDoCodigo/appsettings.json
@@ -1,29 +1,39 @@
 {
-  "Serilog": {
-    "Using": [
-      "Serilog.Sinks.File"
-    ],
-    "WriteTo": [
-      {
-        "Name": "File",
-        "Args": {
-          "path": "Log.txt",
-          "minimumLogEventLevel": "Information"
-        }
-      }
-    ],
-    "Enrich": [
-      "FromLogContext"
-    ]
-  },
-  "Logging": {
-    "IncludeScopes": false,
-    "LogLevel": {
-      "Default": "Warning"
-    }
-  },
-  "ConnectionStrings": {
-    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CasaDoCodigo;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
-    "AppIdentityContextConnection": "DataSource=CasaDoCodigo.db"
-  }
+	"Serilog": {
+		"Using": [
+			"Serilog.Sinks.File"
+		],
+		"WriteTo": [
+			{
+				"Name": "File",
+				"Args": {
+					"path": "Log.txt",
+					"minimumLogEventLevel": "Information"
+				}
+			}
+		],
+		"Enrich": [
+			"FromLogContext"
+		]
+	},
+	"Logging": {
+		"IncludeScopes": false,
+		"LogLevel": {
+			"Default": "Warning"
+		}
+	},
+	"ConnectionStrings": {
+		"Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CasaDoCodigo;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False",
+		"AppIdentityContextConnection": "DataSource=CasaDoCodigo.db"
+	},
+	"ExternalLogin": {
+		"Microsoft": {
+			"ClientId": "6ebf037f-d0dd-4801-a8cc-12365e0e946d",
+			"ClientSecret": "65oB5tL6F_FaWFoF5KZ3twb..M0c2z-~J7"
+		},
+		"Google": {
+			"ClientId": "26786187959-4lmdkhfu0525e9k89eer04np6dcqnmhj.apps.googleusercontent.com",
+			"ClientSecret": "ICzDP8RnE-9l7-ieyB_DBM-4"
+		}
+	}
 }
